# xdg-credentials-portal

./: .gitignore  .gitmodules  COPYING  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
data/: org.freedesktop.portal.FIDO2.xml  org.freedesktop.portal.Notification.xml  org.freedesktop.portal.Request.xml  org.freedesktop.portal.U2F.xml  org.freedesktop.portal.WebAuthn.xml
examples/: ctap1ble.rs  ctap1usb.rs  ctap2ble.rs  ctap2hid.rs  hid.rs  u2f_ble.rs  u2f_hid.rs  webauthn_hid.rs
images/: diagram-1.xml
libwebauthn/: Cargo.toml
libwebauthn/examples/: authenticator_config_hid.rs  bio_enrollment_hid.rs  change_pin_hid.rs  cred_management.rs  u2f_ble.rs  u2f_hid.rs  webauthn_cable.rs  webauthn_extensions_hid.rs  webauthn_hid.rs
libwebauthn/src/: fido.rs  lib.rs  main.rs  management.rs  pin.rs  u2f.rs  ui.rs  webauthn.rs
libwebauthn/src/management/: authenticator_config.rs  bio_enrollment.rs  credential_management.rs
libwebauthn/src/ops/: mod.rs  u2f.rs  webauthn.rs
libwebauthn/src/proto/: error.rs
libwebauthn/src/proto/ctap1/: mod.rs  model.rs  protocol.rs
libwebauthn/src/proto/ctap1/apdu/: request.rs  response.rs
libwebauthn/src/proto/ctap2/: downgrade.rs  mod.rs  model.rs  protocol.rs
libwebauthn/src/proto/ctap2/cbor/: mod.rs  request.rs  response.rs
libwebauthn/src/proto/ctap2/extension/: input.rs  mod.rs  output.rs  processor.rs  registry.rs
libwebauthn/src/proto/ctap2/model/: authenticator_config.rs  bio_enrollment.rs  client_pin.rs  credential_management.rs  get_assertion.rs  get_info.rs  make_credential.rs
libwebauthn/src/transport/: channel.rs  device.rs  error.rs  mod.rs  transport.rs
libwebauthn/src/transport/ble/: channel.rs  device.rs  framing.rs  mod.rs
libwebauthn/src/transport/ble/bluez/: device.rs  gatt.rs  manager.rs  mod.rs
libwebauthn/src/transport/cable/: channel.rs  crypto.rs  digit_encode.rs  discovery.rs  known_devices.rs  mod.rs  qr_code_device.rs  tunnel.rs
libwebauthn/src/transport/hid/: channel.rs  device.rs  framing.rs  mod.rs
libwebauthn/src/transport/usb/: mod.rs
solo/: Cargo.toml  build.rs
solo/src/: lib.rs
src/: fido.rs  lib.rs  main.rs  pin.rs  u2f.rs  ui.rs  webauthn.rs
src/ctap1/: mod.rs  usb.rs
src/ctap2/: ble.rs  mod.rs  protocol.rs
src/ops/: u2f.rs  webauthn.rs
src/proto/: error.rs  mod.rs
src/proto/ctap1/: apdu.rs  manager.rs  mod.rs  model.rs  protocol.rs
src/proto/ctap1/apdu/: mod.rs  request.rs  response.rs
src/proto/ctap2/: downgrade.rs  manager.rs  mod.rs  model.rs  protocol.rs
src/proto/ctap2/cbor/: request.rs
src/transport/: error.rs  mod.rs  usb.rs
src/transport/ble/: device.rs  discovery.rs  error.rs  framing.rs  gatt.rs  mod.rs
src/transport/ble/bluez/: device.rs  error.rs  manager.rs  mod.rs
src/transport/hid/: device.rs  framing.rs  init.rs  mod.rs
src/transport/usb/: mod.rs
