[package]
name = "xdg-credentials-portal"
version = "0.1.0"
authors = ["Alfie Fresta <alfie.fresta@gmail.com>"]
edition = "2018"

[lib]
name = "libwebauthn"
path = "src/lib.rs"

[features]
default = []
hid-device-tests = ["virtual-hid-device"]
virtual-hid-device = ["solo"]

[dependencies]
authenticator = "0.2.15"
base64-url = "1.1.14"
dbus = "0.9.5"
tracing = "0.1.29"
tracing-futures = { version = "0.2.5", features = ["tokio-executor"] }
maplit = "1.0.2"
sha2 = "0.9.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
async-trait = "0.1.36"
futures = "0.3.5"
tokio = { version = "1.1.1", features = ["full"] }
serde = "1.0.110"
serde_cbor = "0.11.1"
serde-indexed = "0.1.0"
serde_derive = "1.0.123"
serde_repr = "0.1.6"
serde_bytes = "0.11.5"
num-traits = "0.2"
num-derive = "0.3"
byteorder = "1.3.4"
blurz = "0.4.0"
num_enum = "0.5.0"
x509-parser = "0.12.0"
hex = "0.4.2"
mockall = "0.10.2"
hidapi = { version = "1.2.5", default-features = false, features = [
    "linux-static-hidraw",
] }
bitflags = "1.2.1"
rand = "0.8.4"
cosey = "0.3.0"
solo = { path = "../solo", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
