[package]
name = "xdg-credentials-portal"
version = "0.1.1"
authors = ["Alfie Fresta <alfie.fresta@gmail.com>"]
edition = "2021"

[lib]
name = "libwebauthn"
path = "src/lib.rs"

[features]
default = []
hid-device-tests = ["virtual-hid-device"]
virtual-hid-device = ["solo"]

[dependencies]
base64-url = "2.0.0"
dbus = "0.9.5"
tracing = "0.1.29"
tracing-futures = { version = "0.2.5", features = ["tokio-executor"] }
maplit = "1.0.2"
sha2 = "0.10.2"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
async-trait = "0.1.36"
futures = "0.3.5"
tokio = { version = "1.1.1", features = ["full"] }
serde = "1.0.110"
serde_cbor = "0.11.1"
serde-indexed = "0.1.0"
serde_derive = "1.0.123"
serde_repr = "0.1.6"
serde_bytes = "0.11.5"
num-traits = "0.2"
num-derive = "0.4.1"
byteorder = "1.3.4"
blurz = "0.4.0"
num_enum = "0.7.1"
x509-parser = "0.15.1"
hex = "0.4.2"
mockall = "0.11.4"
hidapi = { version = "2.4.1", default-features = false, features = [
    "linux-static-hidraw",
] }
bitflags = "2.4.1"
rand = "0.8.4"
p256 = { version = "0.13.2", features = ["ecdh", "arithmetic"] }
heapless = "0.7"
# cosey = "0.3.0"
aes = "0.8"
hmac = "0.12"
cbc = { version = "0.1", features = ["alloc"] }
hkdf = "0.12"
cosey = { path = "../cosey" }
solo = { path = "../solo", optional = true }
text_io = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
